Bug Fixes: Reduce product qusntity on Checkout, toast placement on smaller screens

--- a/week-5-final-project-ecommerce-app/src/app/shared/components/toaster/toast/toast.component.css
+++ b/week-5-final-project-ecommerce-app/src/app/shared/components/toaster/toast/toast.component.css
@@ -1,15 +1,15 @@
-.success {
-  background-color: #198754;
-}
+/*.success {*/
+/*  background-color: #198754;*/
+/*}*/
 
-.info {
-  background-color: #0d6efd;
-}
+/*.info {*/
+/*  background-color: #0d6efd;*/
+/*}*/
 
-.warning {
-  background-color: #ffc107;
-}
+/*.warning {*/
+/*  background-color: #ffc107;*/
+/*}*/
 
-.error {
-  background-color: #dc3545;
-}
+/*.error {*/
+/*  background-color: #dc3545;*/
+/*}*/
